		Automatically invoke --optimize if VPD or WLF is detected;
		invoke on FSDB if FsdbReader is missing.
		Standardized export feature to write vcd using lower case
		for non 0/1 values.
		Added perror() on errno-related exits in vcd loaders.
		Added experimental wlf2vcd in contrib.  It is not currently 
		compiled or used.
		Corrected non-functional typos in documentation.
3.3.54	02jan14	Added LZ4 double compression on hierarchy tree for FST when
		hierarchy size exceeds 4MB.
		Fix to regular expression filtering when +I+ form expressions
		are encountered in the SST.  Previously, the wrong value of
		regex match was used on 32-bit architectures due to the
		stack layout.
		Removed --disable-inline-asm ./configure flag as inline
		assembly has been removed because it is generating incorrectly
		in some cases on x86_64.
3.3.55	06feb14	Fixed problem with FST_DYNAMIC_ALIAS_DISABLE enabled when
		Judy arrays are not present.
		FST writer performance tweaks for traces with millions of 
		signal declarations.
		Keep FSDB_VT_STREAM (FSDB transaction type) traces from 
		attempting to be read (for now) as they aren't yet processed.
		Added more space efficient FST dynamic alias encoding.
		Tempfile creation fix for Windows.  Using tmpnam() is not
		enough and fails depending on user permissions.
		Make vcd2fst use FastLZ instead of LZ4 as a default compression
		type if an EVCD file is being processed as it (re-)compresses
		much better.  Using -4/-F/-Z still gives expected results.
		Changed double printf formatting for FSDB to "%.16g" to match
		VCD formatting.
		Added very fast I/O write capability to fst2vcd.
		Added support for FSDB_BYTES_PER_BIT_2B (EVCD) in FSDB loader.
		Added experimental fsdb2vcd in contrib.  It is not currently 
		compiled or used.
		Fix to treesearch to remove duplicate signal names because of
		faulty dumpers.
		Repscript fix for if -R starts without a dumpfile name.
3.3.56	10feb14	Added another crash fix patch for GTK-OSX.